--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
+  "engines": {
+    "node": "14.16.0",
+    "npm": "6.14.11",
+    "yarn": "1.22.5"
+  },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.73",
     "@docusaurus/preset-classic": "^2.0.0-alpha.73",
